[project]
name = "model-meter"
version = "0.1.0"
description = "LLM intelligence vs. cost chart for Hatz.AI models"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
]

# --- Ruff ---
[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]   # pycodestyle, pyflakes, isort, pyupgrade
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# --- pytest ---
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

